<resources>
    <string name="app_name">ShoeStore</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="instructions">Instructions</string>
    <string name="welcome_to_the_shoe_store">Welcome to the Shoe Store</string>
    <string name="click_the_button_to_see_the_instructions">Click the instructions button to see the instructions.</string>
    <string name="shoe_list">Shoe list</string>
    <string name="to_create_a_shoe">To create a shoe press the add floating button and fill the blanks.</string>
    <string name="instruction_title">Instructions:</string>
    <string name="add_new_shoe">Add new shoe</string>
    <string name="shoe_name">Shoe name</string>
    <string name="company">Company</string>
    <string name="shoe_size">Shoe size</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="shoe_detail">Shoe Detail</string>
    <string name="welcome">Welcome</string>
    <string name="log_out">Log out</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="repeat_password">Repeat password</string>
    <string name="create_user">Create User</string>
    <string name="login_error_text">Something went wrong :( Email does not exist or the password is incorrect</string>
    <string name="number_of_shoes">Pairs available:</string>
    <string name="error_message_complete_fields">Complete all the fields!</string>
</resources>
